--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,5 +13,14 @@ jobs:
       - name: push-urls-to-github
         run: |
           wget https://eonegh.com/usr/plugins/Handsome/cache/search.json -qO search.json
-    
-
+     
+      - name: commit #上传新的refresh_token
+        run: |
+          git config --global user.email AutoupdateRobot@email.com
+          git config --global user.name AutoupdateRobot
+          git add .
+          git commit -m "update" -a || exit 0
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TEST_TOKEN }}
