--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: push-urls-to-github
 on:
   schedule:
-    - cron: 0/2 * * * * 
+    - cron: 0/2 * 1 1 * 
   watch:
     types: started
 jobs:
